--- a/client.html
+++ b/client.html
@@ -24,7 +24,7 @@
         //     }
         // };
         // //
-        let ws = new WebSocket("ws://192.168.0.105:3000");
+        let ws = new WebSocket(`ws://${location.hostname}:3000`);
         ws.onmessage = message => {
             console.log(JSON.parse(message.data));
             let {
